@@ -7,6 +7,8 @@
 * Correct some more vbox() calls left over from gtk+-2
   Closes Debian bug #916011 (Blank dialog - Can't locate object method "vbox")
 * Use output image from user-defined tool even if it throws an error.
+* Don't reapply buttons after reloading options.
+  Closes bug #315 (Software Despeck setting - reload-recursion-limit)
 
 
 2.2.1 (06.12.2018):
